--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,15 @@ body {
   font-family: "Orbitron", sans-serif;
 }
 
+.home > h1 {
+  color: #d40317;
+  font-weight: 600;
+  font-size: 50px;
+  position: absolute;
+  bottom: 60px;
+  left: 300px;
+}
+
 h2 {
   color: #ffffff;
 }
@@ -36,6 +45,30 @@ h2 {
   color: white;
   text-decoration: none;
 }
+.search-container {
+  display: flex;
+  align-items: center;
+  height: 100px;
+}
+.search-input {
+  margin: 0 auto;
+  width: 400px;
+  height: 50px;
+  border-radius: 40px;
+  border: 1px solid rgb(99, 99, 99);
+  text-align: center;
+  background-color: #242424;
+}
+
+/* Home */
+
+.banner {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  margin-top: 30px;
+  position: relative;
+}
 
 /* Cards comics and characters */
 
@@ -46,14 +79,23 @@ h2 {
 }
 .card {
   flex: calc(20% - 1rem);
-  height: 350px;
-  border: solid 1px #d40317;
-  height: 500px;
+  border: 1px solid rgba(99, 99, 99, 0.525);
+  border-radius: 20px;
+  height: 300px;
   cursor: pointer;
+  box-shadow: 5px 2px 2px rgba(255, 0, 0, 0.324);
+  text-decoration: none;
+  transition: all 0.2s;
+}
+
+.card:hover {
+  transform: scale(1.03);
 }
 
 .card-infos {
   height: 20%;
+  display: flex;
+  justify-content: center;
   align-items: center;
 }
 
@@ -68,4 +110,65 @@ h2 {
   height: 100%;
   width: 100%;
   object-fit: cover;
+  border-bottom-right-radius: 20px;
+  border-bottom-left-radius: 20px;
+}
+
+/* Page profile */
+
+.profile-card {
+  display: flex;
+  justify-content: space-around;
+  gap: 20px;
+}
+
+.profile-card img {
+  width: 400px;
+}
+.profile-card h2 {
+  font-size: 50px;
+}
+
+.name-title {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+}
+
+.description {
+  color: white;
+  margin-top: 20px;
+}
+
+.character-comic {
+  display: flex;
+  width: 1280px;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.divider {
+  margin-top: 20px;
+  margin-bottom: 20px;
+  background: #d40317;
+  display: block;
+  height: 1px;
+  width: 100%;
+}
+
+.test {
+  width: 20%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  align-items: center;
+}
+
+.character-comic img {
+  width: 200px;
+}
+
+.comic-infos {
+  align-items: center;
 }
